--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Homework 10</title>
     <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
     />
   </head>
   <body>
@@ -16,7 +15,7 @@
       <!-- Разметка переключателя темы -->
       <div class="theme-switch">
         <svg class="theme-switch__icon" role="img" aria-label="Иконка солнца">
-          <use href="../images/sprite.svg#sun"></use>
+          <use href="./images/sprite.svg#sun"></use>
         </svg>
 
         <div class="theme-switch__control">
@@ -41,12 +40,12 @@
         </svg>
       </div>
     </div>
-    
-<!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
+
     <!-- В этот список рендери разметку меню -->
     <ul class="menu js-menu"></ul>
-
+ 
+<!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="./index.js"></script>
   </body>
 </html>
 
